--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'war'
 }
 
-group 'com.codegym'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -13,9 +13,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
 
-dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.17.RELEASE'
@@ -31,4 +29,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-tx', version: '4.3.17.RELEASE'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.5.3'
+    // https://mvnrepository.com/artifact/ognl/ognl
+    compile group: 'ognl', name: 'ognl', version: '3.2.10'
+
 }
